add fast debian mirror

--- a/samba/share.tmpl
+++ b/samba/share.tmpl
@@ -3,13 +3,17 @@
   read only = ${READONLY}
   available = yes
   public = yes
-  valid users = ${USER},root,guest
+  valid users = ${USER},guest
   browsable = yes
   locking = no
   path = ${VOLUME}
   force user = ${USER}
   force group = ${GROUP}
   guest ok = yes
+  create mask = 0664
+  force create mode = 0664
+  directory mask = 0775
+  force directory mode = 0775
   map archive = no
   map system = no
   map hidden = no
